# OdfEdit

./: .gitignore  OdfEdit.py  README.md  README.txt  install.sh  odfedit.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
doc/: OdfEdit_HW_objects_chart.odg
resources/: Help.txt
src/: Help.txt  HwObjectsAttributesCodes.txt  HwObjectsAttributesDict.txt  HwObjectsTypesList.txt  OdfEdit.py  OdfEdit_2.0.py  OdfEdit_2.1.py  __init__.py
src/resources/: GoObjectsTemplates.txt  Help.txt  HwObjectsAttributesCodes.txt  HwObjectsAttributesDict.txt
