[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OdfEdit"
version = "2.19"
description = "Tool for GrandOrgue organ definition file edition and generation"
readme = "README.md"
authors = [{ name = "Eric Turpault" }]
license = { file = "LICENSE.txt" }
keywords = ["organ", "ODF", "GrandOrgue", "Hauptwerk"]
dependencies = [
    "sounddevice",
    "audioplayer",
    "pillow",
    "lxml",
    'pyobjc>=9.3; sys_platform == "darwin"',
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]
include-package-data = true

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.png", "*.ico"]
